--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "license": "ISC",
   "devDependencies": {
     "babel-loader": "5.3.3",
-    "react": "15.0.1",
-    "webpack": "1.12.2",
-    "react-dom": "15.0.1"
+    "muicss": "^0.5.4",
+    "react": "0.14.3",
+    "react-dom": "0.14.3",
+    "webpack": "1.12.2"
+  },
+  "dependencies": {
+    "es6-promise": "^3.1.2",
+    "whatwg-fetch": "^0.11.0"
   }
 }
